--- a/view/create_task.phtml
+++ b/view/create_task.phtml
@@ -16,12 +16,12 @@
     </header>
 <main>
     <section>
-       
+      
+<h3>Ajouter une tâche</h3> 
  <div class="container d-flex flex-column align-items-center text-center" action="#" method="post ">
   <div class="row align-items-start">
-    <div class="col-12">   
+    <div class="col-3">   
 
-<h3>Ajouter une tâche</h3>
         <form action="" method="post">
 
 
@@ -36,11 +36,11 @@
 </div>
 
 <div class="mb-3">
-  <label for="author" class="form-label">Author</label>
-  <input type="text" class="author" id="author"  required>
+  <label for="author" class="form-label ">Author</label>
+  <input type="text" class="author " id="author"  required>
 </div>
 <div class="mb-3">
-  <label for="status" class="form-label<">Status</label>
+  <label for="status" class="form-label">Status</label>
   <input type="text" class="author" id="status" required>
 </div>
 
@@ -48,8 +48,10 @@
   <label for="Date_due" class="form-label">Date_due</label>
   <input type="date" class="Date_due" id="Date_due" required>
 </div>
+<button type="button" class="form-label ">Ajouter</button>
 
-   </form> </div></div></div>
+   </form> </div>
+   </div></div>
     </section>
 </main>
 </body>
